--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "serverjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "sass --no-source-map --watch scss:public/css"
+    "build-css": "sass --no-source-map --watch scss:public/css",
+    "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css --watch"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,12 @@
   },
   "homepage": "https://github.com/dhruvin-makwana/WEB322_ZCC#readme",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.13",
+    "daisyui": "^4.12.7",
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "tailwindcss": "^3.4.4"
   }
 }
