--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A really simple web server",
   "main": "serverjs",
   "scripts": {
-    "start":"node --watch ./server.js",
+    "start": "node --watch ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "sass --no-source-map --watch scss:public/css",
     "tw:build": "tailwindcss build -i ./public/css/tailwind.css -o ./public/css/main.css --watch"
@@ -26,6 +26,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "cookie-parser": "^1.4.6",
     "daisyui": "^4.12.7",
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   },
   "devDependencies": {
