--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "cookie-parser": "^1.4.6",
     "daisyui": "^4.12.7",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "sass": "^1.77.5",
