--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dhruvin-makwana/WEB322_ZCC#readme",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.6",
     "daisyui": "^4.12.7",
     "ejs": "^3.1.10",
